# grad_field_local_planner

./: .gitignore  CMakeLists.txt  README.md  gflp_plugin.xml  package.xml  setup.bash
include/grad_field_local_planner/: grad_field_local_planner.h
include/gradplanner/: attractor_field.h  field_utils.h  grad_field_base.h  grad_field_controller.h  gradient_field_base.h  repulsive_field.h  utils.h
include/gradplanner_ros/: grad_field_local_planner.h
launch/: move_base.launch  turtlebot3_navigation.launch
params/: base_local_planner_params.yaml  costmap_common_params_waffle_pi.yaml  costmap_common_params_waffle_pi_extended.yaml  costmap_common_params_waffle_pi_stereo.yaml  gf_local_planner_params_waffle_pi_extended.yaml  gf_local_planner_params_waffle_pi_stereo.yaml  local_costmap_params.yaml  move_base.launch
rviz/: turtlebot3_navigation.rviz
src/: CMakeLists.txt  grad_field_local_planner.cpp
src/gradplanner/: CMakeLists.txt  attractor_field.cpp  field.cpp  grad_field_base.cpp  grad_field_controller.cpp  gradient_field_base.cpp  index.cpp  pixel.cpp  repulsive_field.cpp  utils.cpp
src/gradplanner_ros/: CMakeLists.txt  get_params.cpp  grad_field_local_planner.cpp
tests/: CMakeLists.txt  test1.h
tests/gradplanner/: CMakeLists.txt  attractor_field_tests.h  field_utils_tests.h  grad_field_controller_tests.h  gradplanner_timing.cpp  repulsive_field_tests.h  utils_tests.h
tests/gradplanner_ros/: CMakeLists.txt  grad_field_local_planner_tests.h
